--- a/package.json
+++ b/package.json
@@ -52,10 +52,11 @@
 		"blork": "^9.2.2",
 		"cosmiconfig": "^6.0.0",
 		"execa": "^4.0.0",
-		"lodash": "^4.17.15",
 		"get-stream": "^5.1.0",
 		"git-log-parser": "^1.2.0",
+		"lodash": "^4.17.15",
 		"meow": "^6.0.1",
+		"queuefy": "^1.0.0",
 		"require-in-the-middle": "^5.0.3",
 		"semantic-release": "^17.0.4",
 		"semver": "^7.1.3",
