--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@qiwi/multi-semantic-release",
 	"author": "Dave Houlbrooke <dave@shax.com>",
-	"version": "2.4.4-beta.9",
+	"version": "2.4.4-beta.11",
 	"license": "0BSD",
 	"engines": {
 		"node": ">=8.3",
@@ -56,6 +56,7 @@
 		"git-log-parser": "^1.2.0",
 		"lodash": "^4.17.15",
 		"meow": "^6.0.1",
+		"promise-events": "^0.1.8",
 		"queuefy": "^1.1.0",
 		"require-in-the-middle": "^5.0.3",
 		"semantic-release": "^17.0.4",
