--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
 		],
 		"modulePathIgnorePatterns": [
 			"<rootDir>/test/fixtures"
-		]
+		],
+		"testTimeout": 10000
 	},
 	"dependencies": {
 		"blork": "^9.3.0",
+		"@manypkg/get-packages": "^1.1.1",
 		"cosmiconfig": "^7.0.0",
 		"debug": "^4.3.1",
 		"detect-indent": "^6.0.0",
