--- a/.travis.yml
+++ b/.travis.yml
@@ -1,44 +1,74 @@
-os: linux
 language: node_js
-
-stages:
-  - test
-  - release
-
-branches:
-  only:
-  - master
-
+node_js: 16
+install: skip
 cache: yarn
 
-install:
-  - yarn
-
+os: linux
+dist: focal
 
 jobs:
+  fast_finish: true
   include:
-    - stage: test
-      node_js:
-        - 12
-        - 14
-        - 16
-
-      before_script:
-        - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-        - chmod +x ./cc-test-reporter
-        - ./cc-test-reporter before-build
-
+    - stage: verify
+      if: branch != master AND type != pull_request
+      install:
+        - yarn
       script:
-        - yarn test
+        - yarn build
+        - if [ "$CI_TEST" != "false" ]; then
+            yarn lint;
+          fi
 
+    - &build
+      if: branch = master
+      stage: build
+      install:
+        - yarn
+      script:
+        - yarn build
+      # https://docs.travis-ci.com/user/using-workspaces/
+      workspaces:
+        create:
+          name: linux-shared
+          paths:
+            - node_modules
+            - packages
+
+    - &test
+      if: branch = master AND type = pull_request AND env(CI_TEST) != false
+      stage: test
+      script: yarn test
+      workspaces:
+        use: linux-shared
+
+    - <<: *test
+      node_js: 12
+
+    - <<: *test
+      node_js: 14
+
+    - <<: *test
+      if: branch = master AND type != pull_request AND env(CI_TEST) != false
+      before_script:
+        - if [ "$CC_TEST_REPORTER_ID" != "" ]; then
+            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter;
+            chmod +x ./cc-test-reporter;
+            ./cc-test-reporter before-build;
+          fi
+      script:
+        - if [ "$CC_TEST_REPORTER_ID" != "" ]; then
+            yarn test:report;
+          else
+            yarn test;
+          fi
       after_script:
-        - ./cc-test-reporter format-coverage -t lcov ./coverage/lcov.info
-        - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+        - if [ "$CC_TEST_REPORTER_ID" != "" ]; then
+            ./cc-test-reporter format-coverage -t lcov ./coverage/lcov.info;
+            ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT;
+          fi
+
     - stage: release
-      node_js:
-        - 16
-      script: skip # Skip running "yarn test" again
-      deploy:
-        provider: script
-        skip_cleanup: true
-        script: yarn run semantic-release
+      if: branch = master AND type != pull_request AND env(CI_RELEASE) = true
+      workspaces:
+        use: linux-shared
+      script: yarn run semantic-release
