--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"lint": "eslint ./",
 		"lint:fix": "eslint --fix ./",
 		"test": "yarn lint && yarn jest",
-		"test:report": "yarn test && yarn codeclimate:push && yarn coveralls:push",
+		"test:report": "yarn test && yarn coveralls:push",
 		"codeclimate:push": "codeclimate-test-reporter < ./coverage/lcov.info",
 		"coveralls:push": "cat ./coverage/lcov.info | coveralls",
 		"_publish": "semantic-release",
@@ -56,38 +56,37 @@
 		"blork": "^9.3.0",
 		"@manypkg/get-packages": "^1.1.1",
 		"cosmiconfig": "^7.0.0",
-		"debug": "^4.3.1",
-		"detect-indent": "^6.0.0",
+		"debug": "^4.3.2",
+		"detect-indent": "^6.1.0",
 		"detect-newline": "^3.1.0",
-		"execa": "^5.0.0",
-		"get-stream": "^6.0.0",
+		"execa": "^5.1.1",
+		"get-stream": "^6.0.1",
 		"git-log-parser": "^1.2.0",
-		"globby": "11.0.2",
-		"lodash": "^4.17.20",
+		"globby": "11.0.4",
+		"lodash": "^4.17.21",
 		"meow": "^9.0.0",
-		"promise-events": "^0.2.2",
-		"semantic-release": "^17.3.7",
-		"semver": "^7.3.4",
+		"promise-events": "^0.2.4",
+		"semantic-release": "^17.4.4",
+		"semver": "^7.3.5",
 		"signale": "^1.4.0",
 		"stream-buffers": "^3.0.2",
-		"tempy": "^1.0.0"
+		"tempy": "^1.0.1"
 	},
 	"devDependencies": {
-		"@commitlint/config-conventional": "^11.0.0",
+		"@commitlint/config-conventional": "^12.1.4",
 		"@semantic-release/changelog": "^5.0.1",
 		"@semantic-release/git": "^9.0.0",
-		"@semantic-release/github": "^7.2.0",
-		"@semantic-release/npm": "^7.0.10",
-		"codeclimate-test-reporter": "^0.5.1",
-		"commitlint": "^11.0.0",
-		"coveralls": "^3.1.0",
-		"eslint": "^7.19.0",
-		"eslint-config-prettier": "^7.2.0",
-		"eslint-plugin-prettier": "^3.3.1",
+		"@semantic-release/github": "^7.2.3",
+		"@semantic-release/npm": "^7.1.3",
+		"commitlint": "^12.1.4",
+		"coveralls": "^3.1.1",
+		"eslint": "^7.30.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-prettier": "^3.4.0",
 		"file-url": "^3.0.0",
-		"husky": "^4.3.8",
-		"jest": "^26.6.3",
-		"prettier": "^2.2.1"
+		"husky": "^7.0.1",
+		"jest": "^27.0.6",
+		"prettier": "^2.3.2"
 	},
 	"release": {
 		"branch": "master",
