--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"postupdate": "yarn && npx yarn-audit-fix && yarn build && yarn test",
 		"publish:beta": "npm publish --no-git-tag-version --tag beta"
 	},
-	"husky": {
+	"_husky": {
 		"hooks": {
 			"commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
 		}
@@ -54,9 +54,9 @@
 	},
 	"dependencies": {
 		"blork": "^9.3.0",
-		"@manypkg/get-packages": "^1.1.1",
-		"cosmiconfig": "^7.0.0",
-		"debug": "^4.3.2",
+		"@manypkg/get-packages": "^1.1.3",
+		"cosmiconfig": "^7.0.1",
+		"debug": "^4.3.3",
 		"detect-indent": "^6.1.0",
 		"detect-newline": "^3.1.0",
 		"execa": "^5.1.1",
@@ -66,27 +66,27 @@
 		"lodash": "^4.17.21",
 		"meow": "^9.0.0",
 		"promise-events": "^0.2.4",
-		"semantic-release": "^17.4.4",
+		"semantic-release": "^19.0.2",
 		"semver": "^7.3.5",
 		"signale": "^1.4.0",
 		"stream-buffers": "^3.0.2",
 		"tempy": "^1.0.1"
 	},
 	"devDependencies": {
-		"@commitlint/config-conventional": "^12.1.4",
-		"@semantic-release/changelog": "^5.0.1",
-		"@semantic-release/git": "^9.0.0",
-		"@semantic-release/github": "^7.2.3",
-		"@semantic-release/npm": "^7.1.3",
-		"commitlint": "^12.1.4",
+		"@commitlint/config-conventional": "^16.2.1",
+		"@semantic-release/changelog": "^6.0.1",
+		"@semantic-release/git": "^10.0.1",
+		"@semantic-release/github": "^8.0.2",
+		"@semantic-release/npm": "^9.0.0",
+		"commitlint": "^16.2.1",
 		"coveralls": "^3.1.1",
-		"eslint": "^7.30.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-prettier": "^3.4.0",
+		"eslint": "^8.9.0",
+		"eslint-config-prettier": "^8.4.0",
+		"eslint-plugin-prettier": "^4.0.0",
 		"file-url": "^3.0.0",
-		"husky": "^7.0.1",
-		"jest": "^27.0.6",
-		"prettier": "^2.3.2"
+		"husky": "^7.0.4",
+		"jest": "^27.5.1",
+		"prettier": "^2.5.1"
 	},
 	"release": {
 		"branch": "master",
