fix: pin npm version to v8.4.1
relates #60

--- a/package.json
+++ b/package.json
@@ -86,7 +86,8 @@
 		"file-url": "^3.0.0",
 		"husky": "^7.0.4",
 		"jest": "^27.5.1",
-		"prettier": "^2.5.1"
+		"prettier": "^2.5.1",
+		"npm": "8.4.1"
 	},
 	"release": {
 		"branch": "master",
