--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
 	"version": "5.0.3",
 	"license": "0BSD",
 	"engines": {
-		"node": ">=10.18",
+		"node": ">=12.20",
 		"yarn": ">=1.0.0"
 	},
-	"main": "lib/multiSemanticRelease.js",
+	"type": "module",
+	"exports": "./lib/multiSemanticRelease.js",
 	"bin": {
 		"multi-semantic-release": "./bin/cli.js"
 	},
@@ -19,7 +20,7 @@
 	],
 	"scripts": {
 		"watch": "jest --watchAll",
-		"jest": "TRAVIS_PULL_REQUEST_BRANCH=master jest --coverage",
+		"jest": "TRAVIS_PULL_REQUEST_BRANCH=master NODE_OPTIONS=--experimental-vm-modules ./node_modules/.bin/jest --coverage",
 		"lint": "eslint ./",
 		"lint:fix": "eslint --fix ./",
 		"test": "yarn lint && yarn jest",
@@ -50,7 +51,7 @@
 		"modulePathIgnorePatterns": [
 			"<rootDir>/test/fixtures"
 		],
-		"testTimeout": 10000
+		"testTimeout": 50000
 	},
 	"dependencies": {
 		"blork": "^9.3.0",
@@ -63,6 +64,7 @@
 		"get-stream": "^6.0.1",
 		"git-log-parser": "^1.2.0",
 		"globby": "11.0.4",
+		"lodash-es": "^4.17.21",
 		"lodash": "^4.17.21",
 		"meow": "^9.0.0",
 		"promise-events": "^0.2.4",
