--- a/package.json
+++ b/package.json
@@ -54,8 +54,9 @@
 		"testTimeout": 50000
 	},
 	"dependencies": {
-		"blork": "^9.3.0",
 		"@manypkg/get-packages": "^1.1.3",
+		"@semrel-extra/topo": "^1.3.0",
+		"blork": "^9.3.0",
 		"cosmiconfig": "^7.0.1",
 		"debug": "^4.3.3",
 		"detect-indent": "^6.1.0",
@@ -64,8 +65,8 @@
 		"get-stream": "^6.0.1",
 		"git-log-parser": "^1.2.0",
 		"globby": "11.0.4",
-		"lodash-es": "^4.17.21",
 		"lodash": "^4.17.21",
+		"lodash-es": "^4.17.21",
 		"meow": "^9.0.0",
 		"promise-events": "^0.2.4",
 		"semantic-release": "^19.0.2",
