--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
 		]
 	},
 	"jest": {
-		"testURL": "http://localhost",
+		"testEnvironmentOptions": {
+			"url": "http://localhost"
+		},
 		"collectCoverage": true,
 		"collectCoverageFrom": [
 			"lib/**/*.js"
@@ -63,31 +65,30 @@
 		"get-stream": "^6.0.1",
 		"git-log-parser": "^1.2.0",
 		"globby": "13.1.1",
-		"lodash": "^4.17.21",
 		"lodash-es": "^4.17.21",
 		"meow": "^10.1.2",
 		"promise-events": "^0.2.4",
 		"semantic-release": "^19.0.2",
-		"semver": "^7.3.6",
+		"semver": "^7.3.7",
 		"signale": "^1.4.0",
-		"stream-buffers": "^3.0.2",
-		"tempy": "^2.0.0"
+		"stream-buffers": "^3.0.2"
 	},
 	"devDependencies": {
-		"@commitlint/config-conventional": "^16.2.1",
+		"@commitlint/config-conventional": "^16.2.4",
 		"@semantic-release/changelog": "^6.0.1",
 		"@semantic-release/git": "^10.0.1",
 		"@semantic-release/github": "^8.0.4",
 		"@semantic-release/npm": "^9.0.1",
-		"commitlint": "^16.2.3",
+		"commitlint": "^16.2.4",
 		"coveralls": "^3.1.1",
-		"eslint": "^8.13.0",
+		"eslint": "^8.15.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"file-url": "^4.0.0",
 		"husky": "^7.0.4",
-		"jest": "^27.5.1",
-		"prettier": "^2.6.2"
+		"jest": "^28.1.0",
+		"prettier": "^2.6.2",
+		"tempy": "^3.0.0"
 	},
 	"release": {
 		"branch": "master",
