--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
 		"stream-buffers": "^3.0.2"
 	},
 	"devDependencies": {
+		"@jest/globals": "^28.1.0",
 		"@commitlint/config-conventional": "^16.2.4",
 		"@semantic-release/changelog": "^6.0.1",
 		"@semantic-release/git": "^10.0.1",
@@ -85,7 +86,6 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"file-url": "^4.0.0",
-		"husky": "^7.0.4",
 		"jest": "^28.1.0",
 		"prettier": "^2.6.2",
 		"tempy": "^3.0.0"
