ci: update pipeline

--- a/package.json
+++ b/package.json
@@ -27,11 +27,7 @@
 		"lint:fix": "eslint --fix ./",
 		"test": "yarn lint && yarn test:unit",
 		"test:unit": "NODE_OPTIONS=--experimental-vm-modules ./node_modules/.bin/jest --coverage",
-		"test:report": "yarn test && yarn coveralls:push",
-		"codeclimate:push": "codeclimate-test-reporter < ./coverage/lcov.info",
-		"coveralls:push": "cat ./coverage/lcov.info | coveralls",
-		"_publish": "semantic-release",
-		"build": "echo 'There is no need for build && exit 0'",
+		"build": "echo 'There is no need for build' && exit 0",
 		"postupdate": "yarn && npx yarn-audit-fix && yarn build && yarn test",
 		"publish:beta": "npm publish --no-git-tag-version --tag beta"
 	},
@@ -80,7 +76,6 @@
 		"@semantic-release/github": "^8.0.7",
 		"@semantic-release/npm": "^9.0.1",
 		"commitlint": "^17.6.3",
-		"coveralls": "^3.1.1",
 		"eslint": "^8.41.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-prettier": "^4.2.1",
